--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -30,12 +30,14 @@
                 {% endif %}
                 </div>
                 <div class="pure-u-1-2">
+                    {% if user.is_authenticated %}
                     <div id="donation-summary">
                         <form class="pure-form" action="{% url "donate" %}" method="POST" id="donate-form">
                             {% blocktrans with currency=user.profile.currency donated=user.profile.amount_donated to_donate=user.profile.amount_to_donate|floatformat:"0" %}Donated: {{ currency }}{{ donated }}, donate {{ currency }}<input type="number" required="true" min="1" placeholder="{{ to_donate }}" value="{{ to_donate }}" id="id_amount"/>{% endblocktrans %} <input type="submit" value="{% trans "Donate" %}" />
                         </form>
                         <div class="message"></div>
                     </div>
+                    {% endif %}
                 </div>
             </div>
             {% block content %}
